# HIT_OOP_Summer_2024_Lectures

./: .gitignore  README.md
Lesson 01/: ex_01_hello_world.cpp  ex_02_input_output.cpp  ex_02_input_output.ilk  ex_03_references.cpp  ex_04_parameters.cpp  ex_04_parameters.ilk  ex_05_const_by_reference.ilk  ex_06_structures.cpp  ex_07_passing_structures.cpp  ex_08_default_values.cpp  ex_08_default_values.ilk  ex_09_function_overloading.cpp  ex_09_function_overloading.ilk  ex_11_variables.cpp  ex_12_local_variables.ilk  ex_15_static_vars.cpp  hello_world.ilk
Lesson 01. Introduction/: ex_05_const_by_reference.cpp  ex_10_function_overloading.cpp  ex_12_local_variables.cpp  ex_13_local_var_in_loop.cpp  ex_14_global_var.cpp
Lesson 02 - Classes/EX_01_time/: Time.cpp
Lesson 02 - Classes/EX_02_Constructors/: Date.cpp  Date.h  DateTest.cpp
Lesson 02 - Classes/Ex_01_point/: CMakeLists.txt  Point.cpp
Lesson 02 - Classes/Ex_02_point/: Point.cpp  Point.h  PointTest.cpp
Lesson 02 - Classes/Ex_03_return_reference_to_private_var/: Time.cpp  Time.h  TimeTest.cpp
Lesson 02 - Classes/Questions/: EX_03.cpp
Lesson 02. Classes/EX_01_time/: Time.h  TimeTest.cpp
Lesson 02. Classes/Ex_02_point/: Point.h  PointTest.cpp
Lesson 02. Classes/Ex_03_return_reference_to_private_var/: Time.cpp  TimeTest.cpp
Lesson 02. Classes/Questions/: ex1.cpp  ex_04.cpp
Lesson 03 - Destructors/: ConstructAndDestruct.cpp  ConstructAndDestructTest.cpp
Lesson 04 - const friend composition/ex_01_const_funct/: CMakeCache.txt  CMakeLists.txt  Time.cpp  Time.h  TimeTest.cpp
(+205 files in other folders)
